--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
         "dev": "yarn compile -w",
         "story": "start-storybook -p 3001 -c .storybook"
     },
-    "dependencies": {},
+    "dependencies": {
+        "@types/lodash.curry": "^4.1.4",
+        "@types/lodash.get": "^4.4.4",
+        "@types/lodash.setwith": "^4.3.4",
+        "lodash.curry": "^4.1.1",
+        "lodash.get": "^4.4.2",
+        "lodash.setwith": "^4.3.2"
+    },
     "devDependencies": {
         "@storybook/react": "^4.0.0-alpha.6",
         "@types/node": "^10.1.0",
