--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "compile": "tsc --project tsconfig.json --outDir dist",
         "dev": "yarn compile -w",
-        "story": "start-storybook -p 3001 -c .storybook"
+        "story": "start-storybook -p 3001 -c .storybook",
+        "deploy-storybook": "storybook-to-ghpages"
     },
     "dependencies": {
         "@types/lodash.get": "^4.4.4",
@@ -16,6 +17,7 @@
     },
     "devDependencies": {
         "@storybook/react": "^4.0.0-alpha.6",
+        "@storybook/storybook-deployer": "^2.3.0",
         "@types/node": "^10.1.0",
         "@types/react": "^16.3.14",
         "@types/storybook__react": "^3.0.7",
